js/js.translator/testData/incremental/invalidation/companionPropertiesWithCrossModuleInliner/lib1/l1.2.kt
class MyClass {
    companion object {
        val stringProperty = "-1"
        val intProperty = 3
        val pairProperty = -1 to 2
    }
}
